--- a/frontend/team0x00-app/src/styles/stylesheet.css
+++ b/frontend/team0x00-app/src/styles/stylesheet.css
@@ -131,7 +131,7 @@ body {
 
 
 .addIcon {
-	background: url("https://image.flaticon.com/icons/svg/60/60740.svg") center no-repeat;
+	background: url("../assets/upload-icon.png") center no-repeat;
 	background-size: contain;
 	padding: 40px;
 	display: table;
