--- a/frontend/team0x00-app/src/styles/stylesheet.css
+++ b/frontend/team0x00-app/src/styles/stylesheet.css
@@ -1,47 +1,331 @@
-html {
-	font-size: 10px;
-	font-family: sans-serif;
+/* --- LAYOUT --- */
+div.container {
+	min-height: 100vh;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	margin: 0;
+	padding: 0;
 }
-
-p {
-	font-size: 1.6rem;
-	line-height: 1.5;
-}
-
-
-
-h1 {
-	font-family: billabong, 'billabongregular';
-	text-align: center;
-	font-weight: 100;
-	font-size: 13rem;
-	margin: 2rem 0;
-	letter-spacing: -1px;
-	color: black;
-	text-decoration: none;
-}
-
-h1 a {
-	color: black;
-	text-decoration: none;
-}
-
-h1 a:focus {
-	outline: 0;
-}
-
-@font-face {
-	font-family: 'billabongregular';
-	src: url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.eot");
-	src: url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.eot?#iefix") format('embedded-opentype'), url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.woff") format('woff'), url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.ttf") format('truetype'), url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.svg#billabongregular") format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
 
 body {
-	background: offwhite;
+	background: #F5F5F5;
+	margin: 0;
 }
+
+@media screen and (max-width: 1440px){
+	div.container{
+		flex-direction: column;
+	}
+}
+/* --- TYPOGRAPHY --- */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+
+* {
+    font-family: 'Poppins';
+    color: #333
+}
+
+h1, .display {
+    font-size: 26px;
+    font-weight: 600;
+    margin: 0;
+    margin-bottom: 16px;
+}
+
+h2, .title {
+    font-size: 22px;
+    font-weight: 500;
+    margin: 0;
+    margin-bottom: 16px;
+}
+
+h3, .menu-element {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.menu {
+	margin-top: 48px;
+}
+
+.menu-element {
+	margin-bottom: 16px;
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+
+.menu-element:hover, .menu-element:hover * {
+	color:#AE956B;
+	fill: #AE956B;
+}
+
+.username {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+p, .body{
+    font-size: 16px;
+	margin: 0;
+}
+
+small {
+    text-transform: uppercase;
+    font-weight: 600;
+    color: #AE956B;
+}
+
+.text-center {
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+}
+
+/* ---- COLORS --- */
+
+/* Text color */
+.primary {
+    color: #AE956B
+}
+
+.text {
+    color: #333333
+}
+
+.subtle {
+    color: #9A9A9A
+}
+
+.border {
+    color: #E9E9E9
+}
+
+.accent {
+    color: #F5F5F5
+}
+
+/* Background color */
+
+.bg-white {
+    background-color: #fff
+}
+
+.bg-primary {
+   background-color: #AE956B
+}
+
+.bg-text {
+    background-color: #333333
+}
+
+.bg-subtle {
+    background-color: #9A9A9A
+}
+
+.bg-border {
+    background-color: #E9E9E9
+}
+
+.bg-accent {
+    background-color: #F5F5F5
+}
+
+.bg-white {
+    background-color: #fff
+}
+
+/* --- FORM ELEMENTS --- */
+
+input {
+    font-size: 16px;
+    color: #333;
+    border: none;
+    background-color: #F5F5F5;
+    padding: 10px 20px;
+    border-radius: 10px;
+	box-sizing: border-box;
+}
+input::placeholder {
+    color:  #9A9A9A;
+}
+
+div.input-with-icon{
+    position: relative;
+}
+
+div.input-with-icon > img.icon {
+	width: 24px;
+    object-fit: contain;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 15px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+div.input-with-icon > input {
+    padding-left: 50px;
+}
+
+.btn {
+    font-size: 16px;
+    text-align: center;
+    background: none;
+    border-radius: 10px;
+    padding: 6px 15px;
+    border: none;
+    color: #333;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-basis: auto;
+}
+
+.btn-primary {
+    background-color: #AE956B;
+    color: #fff;
+}
+
+.btn-primary:hover {
+    background-color: #b4a07d;
+    color: #fff;
+    cursor: pointer;
+}
+
+.btn-outline {
+    border: 1px solid #AE956B;
+    color: #AE956B;
+}
+
+.btn-outline:hover {
+    border: 1px solid #cfbfa2;
+    color: #cfbfa2;
+    cursor: pointer;
+}
+
+.btn-small {
+    color: #AE956B;
+    font-weight: 500;
+}
+
+.btn-small:hover {
+    color: #cfbfa2;
+    cursor: pointer;
+}
+
+.action-button {
+    width: 40px;
+    height: 40px;
+    background: #F5F5F5;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.action-button:hover {
+    cursor: pointer;
+    background-color: #e0e0e0;
+}
+
+/* --- UI Elements --- */
+hr {
+    border: 1px solid #E9E9E9;
+}
+
+.profile {
+    border-radius: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #AE956B;
+}
+
+.profile > img {
+    width: 85%;
+    height: 85%;
+    border-radius: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.profile-large{
+    height: 90px;
+    width: 90px;
+}
+
+.profile-medium {
+    height: 48px;
+    width: 48px;
+}
+
+img.profile-small {
+    border-radius: 100%;
+    object-fit: cover;
+    object-position: center;
+    width: 32px;
+    height: 32px;
+}
+
+svg.icon {
+    width: 24px;
+    height: 24px;
+}
+
+svg.icon * {
+    stroke: #333;
+}
+
+/* --- HELPERS --- */
+
+.w-100 {
+	width: 100%;
+}
+
+.mb-0 {
+	margin-bottom: 0;
+}
+
+.mb-1 {
+	margin-bottom: 8px;
+}
+
+.mb-2 {
+	margin-bottom: 16px;
+}
+
+.mb-3 {
+	margin-bottom: 24px;
+}
+
+.mb-4 {
+	margin-bottom: 32px;
+}
+
+.mt-0 {
+	margin-top: 0;
+}
+
+.mt-1 {
+	margin-top: 8px;
+}
+
+.mt-2 {
+	margin-top: 16px;
+}
+
+.mt-3 {
+	margin-top: 16px;
+}
+
+/* --- LEGACY --- */
 
 .photoGrid {
 	display: flex;
@@ -110,13 +394,6 @@ body {
 
 
 
-.comment{
-	width: 100%
-}
-.comment p {
-	border-bottom: 1px solid #d3d3d3;
-	padding: 0.5rem 0;
-}
 .comment-form input,
 .comment-form textarea {
 	width: 100%;
@@ -159,7 +436,6 @@ button, .button {
 	text-align: center;
 	font-size: 15px;
 	color: red;
-	transition: all 0.2s;
 	box-sizing: padding-box;
 	
 }
