--- a/frontend/team0x00-app/src/components/Post/post.css
+++ b/frontend/team0x00-app/src/components/Post/post.css
@@ -1,6 +1,7 @@
 div.post {
     position: relative;
-    display: flex;
+    display: grid;
+    grid-template-columns: 360px auto;
     width: 100%;
     gap: 30px;
     margin-bottom: 48px;
@@ -11,25 +12,27 @@ img.post-img {
     object-fit: cover;
     object-position: center;
     width: 360px;
-    height: 360px;
+    /* height: 360px */
 	min-width: 360px;
     min-height: 360px;
 }
 
 div.post-info  {
     width: 100%;
-    max-height: 360px;
+    /* max-height: 360px; */
     display: flex;
     flex-direction: column;
+    height: 0;
+    min-height: 100%;
 }
 
 div.comments {
-    max-height: 150px;
-    overflow-y: scroll;
+    overflow: auto;
 }
 
 @media screen and (max-width: 760px){
 	div.post{
+        display: flex;
 		flex-direction: column;
         align-items: center;
 	}
@@ -45,6 +48,7 @@ div.comments {
     div.post-info {
         width: 90%;
         max-height: 500px;
+        height: auto;
     }
 
     img.post-img {
@@ -58,7 +62,7 @@ div.comments {
     }
 
     div.comments {
-        max-height: 300px;
+        max-height: 400px;
     }
 }
 
@@ -86,6 +90,11 @@ div.author-bar {
     padding-bottom: 20px;
     border-bottom: 1px solid #E9E9E9;
 }
+
+div.author-bar div.profile {
+    flex-shrink: 0;
+}
+
 div.author-bar .info {
     line-height: 18px;
 }
@@ -97,8 +106,10 @@ div.author-bar div.actions {
 div.comment-section {
     max-height: 100%;
     height: 100%;
+    min-height: 200px;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 div.comment-section div.write {
