--- a/frontend/team0x00-app/src/components/Content/content.css
+++ b/frontend/team0x00-app/src/components/Content/content.css
@@ -11,7 +11,13 @@ div.content {
 div.wrapper {
     width: calc(100% - 40px) !important;
     max-width: 1000px;
-    padding: 40px;
+    padding: 40px 10px;
+}
+
+@media screen and (max-width: 760px) {
+    div.wrapper {
+        padding: 40px 0px;
+    }
 }
 
 .icon.search-icon {
