--- a/frontend/team0x00-app/src/styles/stylesheet.css
+++ b/frontend/team0x00-app/src/styles/stylesheet.css
@@ -19,11 +19,8 @@ body {
 	}
 }
 /* --- TYPOGRAPHY --- */
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-
 * {
-    font-family: 'Poppins';
+	font-family: 'Poppins', 'Helvetica', sans-serif;
     color: #333;
 	box-sizing: border-box;
 }
