--- a/frontend/team0x00-app/src/components/Post/post.css
+++ b/frontend/team0x00-app/src/components/Post/post.css
@@ -36,7 +36,7 @@ div.comments {
 		flex-direction: column;
         align-items: center;
 	}
-    div.delete-post {
+    div.post-actions {
         position: absolute;
         top: 10px;
         left: 0;
@@ -74,10 +74,14 @@ div.comments {
 
 
 
-div.delete-post {
+div.post-actions {
     position: absolute;
     top: 10px;
     left: 10px;
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
 }
 
 div.write {
