--- a/frontend/team0x00-app/src/components/Upload/upload.css
+++ b/frontend/team0x00-app/src/components/Upload/upload.css
@@ -67,3 +67,22 @@ div.upload-form-elements input {
     max-width: 100%;
     background: white;
 }
+
+div.file {
+    background: white;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    margin-bottom: 20px;
+    max-width: 200px;
+    word-break: break-all;
+    flex-wrap: wrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+div.file h3 {
+    margin: 0;
+    padding: 10px;
+}
