--- a/frontend/team0x00-app/src/styles/stylesheet.css
+++ b/frontend/team0x00-app/src/styles/stylesheet.css
@@ -84,6 +84,19 @@ a {
     text-decoration: none;
 }
 
+div.warning {
+	padding: 20px;
+	color: white;
+	background: #ec695a;
+	border-radius: 10px;
+	text-align: center;
+	margin: 20px 0px
+}
+
+div.warning p {
+	color: white;
+}
+
 /* ---- COLORS --- */
 
 /* Text color */
