--- a/frontend/team0x00-app/src/styles/stylesheet.css
+++ b/frontend/team0x00-app/src/styles/stylesheet.css
@@ -90,7 +90,8 @@ div.warning {
 	background: #ec695a;
 	border-radius: 10px;
 	text-align: center;
-	margin: 20px 0px
+	margin: 20px 0px;
+	width: 80%;
 }
 
 div.warning p {
