--- a/frontend/team0x00-app/src/components/Login/login.css
+++ b/frontend/team0x00-app/src/components/Login/login.css
@@ -1,16 +1,17 @@
 div.loginbox {
 	display: flex;
-	flex-wrap: wrap;
 	max-width: 500px;
 	margin: 0 auto;
 	align-items: center;
 	align-content: center;
 	justify-content: center;
+    flex-direction: column;
 	background: #FFFFFF;
 	box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
 	border-radius: 15px;
 	width: 427px;
-	height: 600px;
+	height: fit-content;
+    padding: 20px 0;
 }
 
 div.loginbox-form-elements input {
