--- a/frontend/team0x00-app/src/components/Login/login.css
+++ b/frontend/team0x00-app/src/components/Login/login.css
@@ -11,13 +11,17 @@ div.loginbox {
 	border-radius: 15px;
 	width: 427px;
 	height: fit-content;
-    padding: 20px 0;
+    padding: 20px 30px;
 }
 
 div.loginbox-form-elements {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+}
+
+div.loginbox-form-elements * {
     width: 100%;
 }
 
@@ -44,4 +48,9 @@ div.topbox .logo {
     object-position: center;
     display: flex;
     justify-content: center;
+}
+
+small.password-disclaimer {
+    color: #9A9A9A;
+    text-align: center;
 }
