All Admin Functions Working

--- a/frontend/team0x00-app/src/components/Popup/popup.css
+++ b/frontend/team0x00-app/src/components/Popup/popup.css
@@ -29,6 +29,10 @@ div.popup {
     box-sizing: border-box;
 }
 
+div.popup * {
+    max-width: 100%;
+}
+
 div.popup .btn {
     display: inline-block;
 }
